ola-parser/src/testdata/syntaxTests/functionTypes/delete_function_type_invalid.sol
contract C {
    fn f() public {
        delete f;
    }
}
// ----
// TypeError 4247: (54-55): Expression has to be an lvalue.
